Fix text being cut off in search results

--- a/packages/aria-player/src/components/pages/search/SearchResults.module.css
+++ b/packages/aria-player/src/components/pages/search/SearchResults.module.css
@@ -60,7 +60,6 @@
 
 .gridItem {
   padding: 0.5rem;
-  overflow: hidden;
   box-sizing: border-box;
 }
 
